Migrated all Order related entity beans to JPA